--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
+    "@tanstack/react-query": "^5.37.1",
+    "@web3modal/ethereum": "^2.7.0",
+    "@web3modal/react": "^2.7.0",
+    "@web3modal/wagmi": "3.5.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "tailwind-merge": "^2.3.0"
+    "react-toastify": "^9.1.3",
+    "tailwind-merge": "^2.3.0",
+    "viem": "^1.4.1",
+    "wagmi": "^1.3.9"
   },
   "devDependencies": {
     "@types/node": "^20",
